--- a/src/app/mixes/mixes.component.css
+++ b/src/app/mixes/mixes.component.css
@@ -26,3 +26,10 @@ a {
     width: 50%;
   }
 }
+
+.category {
+  padding: 40px;
+  background-color: #333;
+  color: white;
+  overflow: hidden;
+}
